--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,9 @@
   "name": "api",
   "version": "0.0.0",
   "main": "server.js",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "type": "module",
   "scripts": {},
   "author": {
@@ -12,6 +15,7 @@
   "dependencies": {
     "@koa/cors": "^3.4.2",
     "@koa/router": "^12.0.0",
+    "@prisma/client": "^4.4.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0"
   },
