--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,9 @@
     "seed": "node prisma/seed.js"
   },
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "start": "node -r dotenv-safe/config server.js"
+  },
   "author": {
     "name": "Thiago Back",
     "email": "thiagorback@gmail.com"
@@ -16,6 +18,10 @@
     "@koa/cors": "^3.4.2",
     "@koa/router": "^12.0.0",
     "@prisma/client": "^4.4.0",
+    "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
+    "dotenv-safe": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0"
   },
