--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv-safe/config app/index.js"
+    "start": "node -r dotenv-safe/config api/index.js"
   },
   "author": {
     "name": "Thiago Back",
