--- a/web/.env
+++ b/web/.env
@@ -1,2 +1,2 @@
-VITE_API_URL="http://192.168.0.10:3000"
-#https://natrave-api-omega.vercel.app/
+VITE_API_URL="https://natrave-api-omega.vercel.0app/"
+#https://natrave-api-omega.vercel.0app/
